--- a/templates/report_template.html
+++ b/templates/report_template.html
@@ -422,7 +422,7 @@
         </footer>
     </div>
 
-    <script>
+    <script type="text/template">
         {% if charts.cpu_gauge %}
         var cpuData = {{ charts.cpu_gauge | safe }};
         Plotly.newPlot('cpu-gauge', cpuData.data, cpuData.layout, {responsive: true});
